fixed alignment on pages form and collage

--- a/packages/storybook/src/templates/globals.css
+++ b/packages/storybook/src/templates/globals.css
@@ -8,6 +8,10 @@ body {
   padding-inline: 0;
 }
 
+h1 {
+  word-break: break-word;
+}
+
 .rhc-templates-page {
   background-color: #f2f4f6;
 }
